--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ scikit-learn = "^1.3.1"
 ur-rtde = "^1.5.7"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.10.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
