--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,16 @@ authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
 readme = "README.org"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = "^3.10"
+numpy = "^1.26.2"
 pybullet = "^3.2.5"
-numpy = "^1.26.0"
-scikit-learn = "^1.3.1"
+scikit-learn = "^1.3.2"
 ur-rtde = "^1.5.7"
-mujoco = "^3.0.0"
+mujoco = "^3.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.10.1"
+black = "^23.11.0"
 
 [build-system]
 requires = ["poetry-core"]
