--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 numpy = "^1.26.2"
 pybullet = "^3.2.5"
 scikit-learn = "^1.3.2"
-ur-rtde = "^1.5.7"
+ur-rtde = {path = "../ur_rtde", develop = false}
 mujoco = "^3.0.1"
 
 
