--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,10 @@ authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
 readme = "README.org"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^1.26.2"
+python = ">=3.8,<3.11"
+numpy = "<1.26.2"
 pybullet = "^3.2.5"
 scikit-learn = "^1.3.2"
-ur-rtde = {path = "../ur_rtde", develop = false}
 mujoco = "^3.0.1"
 
 
