--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,33 @@ authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
 readme = "README.org"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
-numpy = "<1.26.2"
-pybullet = "^3.2.5"
+python = ">=3.8,<3.9"
+numpy = "<1.24"
 scikit-learn = "^1.3.2"
+
+[tool.poetry.group.reality]
+optional = true
+
+[tool.poetry.group.reality.dependencies]
+ur-rtde = {path = "../ur_rtde"}
+
+[tool.poetry.group.pybullet]
+optional = true
+
+[tool.poetry.group.pybullet.dependencies]
+pybullet = "^3.2.5"
+
+[tool.poetry.group.mujoco]
+optional = true
+
+[tool.poetry.group.mujoco.dependencies]
 mujoco = "^3.0.1"
+
+[tool.poetry.group.torch_robotics]
+optional = true
+
+[tool.poetry.group.torch_robotics.dependencies]
+torch-robotics = {path = "../torch_robotics"}
 
 
 [tool.poetry.group.dev.dependencies]
