--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.org"
 python = ">=3.8,<3.9"
 numpy = "<1.24"
 scikit-learn = "^1.3.2"
+corallab-assets = {path = "../corallab-assets", develop = true}
 
 [tool.poetry.group.reality]
 optional = true
@@ -32,7 +33,7 @@ mujoco = "^3.0.1"
 optional = true
 
 [tool.poetry.group.torch_robotics.dependencies]
-torch-robotics = {path = "../torch_robotics"}
+torch-robotics = {path = "../torch_robotics", develop = true}
 
 
 [tool.poetry.group.dev.dependencies]
