--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.org"
 python = ">=3.8,<3.9"
 numpy = "<1.24"
 scikit-learn = "^1.3.2"
-corallab-assets = {path = "../corallab-assets", develop = true}
+corallab-assets = {git = "https://github.com/corallab-base/assets.git", rev = "0.2.0"}
 
 [tool.poetry.group.reality]
 optional = true
