Add gyms and pybullet gym implementations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ numpy = "<1.24"
 scikit-learn = "^1.3.2"
 corallab-assets = {git = "https://github.com/corallab-base/assets.git", rev = "0.2.2"}
 
-ur-rtde = { path = "../ur_rtde", optional = true }
 pybullet = { version = "^3.2.5", optional = true }
+pybullet-envs-gymnasium = {git = "https://github.com/araffin/pybullet_envs_gymnasium", optional = true }
+
 mujoco = { version = "^3.0.1", optional = true }
 torch-robotics = {path = "../torch_robotics", optional = true, develop = true}
 
@@ -21,7 +22,7 @@ black = "^23.11.0"
 
 
 [tool.poetry.extras]
-pybullet = ["pybullet"]
+pybullet = ["pybullet", "pybullet-envs-gymnasium"]
 torch-robotics = ["torch-robotics"]
 
 
