--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,37 @@
-[tool.poetry]
+[project]
 name = "corallab-lib"
 version = "0.1.0"
-description = ""
-authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
-readme = "README.org"
+description = "Library providing a common API to many useful robotics libraries."
+authors = [{name = "Tassos Manganaris", email = "tassos.manganaris@gmail.com"}]
+requires-python = ">=3.8,<3.9"
+dependencies = ["corallab-assets @ git+https://github.com/corallab-base/assets.git@0.2.2", "pygame", "gymnasium"]
 
-[tool.poetry.dependencies]
-python = ">=3.8,<3.9"
-numpy = "<1.24"
-scikit-learn = "^1.3.2"
-corallab-assets = {git = "https://github.com/corallab-base/assets.git", rev = "0.2.2"}
-
-pybullet = { version = "^3.2.5", optional = true }
-pybullet-envs-gymnasium = {git = "https://github.com/araffin/pybullet_envs_gymnasium", optional = true }
-
-mujoco = { version = "^3.0.1", optional = true }
-torch-robotics = {path = "../torch_robotics", optional = true }
-pygame = "^2.5.2"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.11.0"
-
-
-[tool.poetry.extras]
-pybullet = ["pybullet", "pybullet-envs-gymnasium"]
-torch-robotics = ["torch-robotics"]
-
-
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+# Tasks
+
+[tool.pixi.tasks]
+
+# Dependencies
+
+[tool.pixi.dependencies]
+python = "3.8.*"
+numpy = "<1.24"
+
+[project.optional-dependencies]
+pybullet = ["pybullet", "pybullet-envs-gymnasium"]
+torch-robotics = ["torch-robotics @ file:///home/tassos/phd/qureshi/first-project/torch_robotics"]
+
+[tool.pixi.pypi-dependencies]
+corallab-lib = { path = ".", editable = true }
+
+# Environments
+
+[tool.pixi.environments]
+default = {features = ["pybullet", "torch-robotics"], solve-group = "default"}
