--- a/pixi.toml
+++ b/pixi.toml
@@ -320,6 +320,8 @@ python = ">=3.10.15,<4"
 corallab-lib = { path = ".", editable = true }
 matplotlib = ">=3.9.2, <4"
 jaxtyping = ">=0.2.34, <0.3"
+torch = ">=2.4.1, <3"
+scipy = ">=1.14.1, <2"
 
 [feature.brax.pypi-dependencies]
 jax = { version = ">=0.4.33, <0.5", extras = ["cuda12"] }
@@ -332,6 +334,11 @@ mujoco = "*"
 [feature.robosuite.pypi-dependencies]
 robosuite = { path = "/home/tassos/phd/qureshi/robosuite" }
 numba = ">=0.60.0, <0.61"
+
+[feature.gymnasium-robotics.pypi-dependencies]
+gymnasium-robotics = { git = "https://github.com/Farama-Foundation/Gymnasium-Robotics" }
+mujoco = ">=3.0, <3.2.0"
+gymnasium = ">=1.0.0a2"
 
 # [feature.d4rl.pypi-dependencies]
 # d4rl = { path = "/home/tassos/phd/qureshi/d4rl" }
@@ -524,4 +531,5 @@ default = { solve-group = "default" }
 # d4rl = { features = ["d4rl"], solve-group = "default" }
 robosuite = { features = ["robosuite"], solve-group = "default" }
 mujoco = { features = ["mujoco"], solve-group = "default" }
-brax = { features = ["brax"], solve-group = "default" }
+brax = { features = ["brax"], solve-group = "brax-solve-group" }
+gymnasium-robotics = { features = ["gymnasium-robotics"], solve-group = "default" }
