--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,13 @@ packages = [{include = "corallab_lib"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
-jaxtyping = "^0.2.34"
+jaxtyping = ">=0.2.34, <0.3"
+gymnasium-robotics = { git = "https://github.com/Farama-Foundation/Gymnasium-Robotics", optional = true }
+mujoco = { version = ">=3.0, <3.2.0", optional = true }
+gymnasium = { version = ">=1.0.0a2", optional = true }
 
+[tool.poetry.extras]
+gymnasium-robotics = ["gymnasium-robotics", "mujoco", "gymnasium"]
 
 [build-system]
 requires = ["poetry-core"]
