--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ jaxtyping = ">=0.2.34, <0.3"
 gymnasium-robotics = { git = "https://github.com/Farama-Foundation/Gymnasium-Robotics", optional = true }
 mujoco = { version = ">=3.0, <3.2.0", optional = true }
 gymnasium = { version = ">=1.0.0a2", optional = true }
+pygame = { version = "^2.6.1", optional = true }
 
 [tool.poetry.extras]
+torch-robotics = ["gymnasium", "pygame"]
 gymnasium-robotics = ["gymnasium-robotics", "mujoco", "gymnasium"]
 
 [build-system]
